added embedded video url support

--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
 </head>
 <body>
 
-<div id="content">
+<main id="content">
 	<section>
 		<label for="date">Select a date: </label>
 		<input type="date" id="date" name="date" min="1995-06-16">
 		<!-- <button>Submit</button> -->
 	</section>
-	<h1></h1>
-	<p id="text">hello, hello! enter a date to obtain that day's Photo of the Day from NASA</p>
-	<img id="image"></img>
-	<video>
-		<source id="video" src="" type="video/mp4">
-	</video>
-</div>
+	<h1 class="hide"></h1>
+	<p id="text">hello, human! enter a date to obtain that day's Photo of the Day from NASA</p>
+	<img id="image" class="hide"></img>
+	<iframe class= "hide" src="" frameborder="0" allowfullscreen></iframe>
+</main>
 
 <script type="text/javascript" src="js/script.js"></script>
 </body>
